--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,8 @@ v-collapse">
           <a class="brand" href="#">{{ site.name }}</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="/">Home</a></li>
+              <li><a href="/">Home</a></li>
+              <li><a href="/">Projects</a></li>
             </ul>
           </div>
         </div>
