--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,10 @@
 
+      </div>
+      <div class="push"></div>
     </div>
 
+    <footer class="primary">
+      <p>Copyright (c) Tony 2013</p>
+    </footer>
   </body>
 </html>
