--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,12 +7,8 @@
     <meta name="description" content="{{ site.description }}">
 
     <link href="/css/bootstrap.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px;
-      }
-    </style>
     <link href="/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -23,7 +19,7 @@ ript>
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".na\
@@ -36,11 +32,12 @@ v-collapse">
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="/">Home</a></li>
-              <li><a href="/">Projects</a></li>
+              <li><a href="/project">Projects</a></li>
             </ul>
           </div>
         </div>
       </div>
-    </div>
+    </nav>
 
-    <div class="container">
+    <div class="wrapper">
+      <div class="container">
