--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,8 @@ v-collapse">
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="/">Home</a></li>
-              <li><a href="/project">Projects</a></li>
+              <li><a href="/projects">Projects</a></li>
+              <li><a href="/about">About Me</a></li>
             </ul>
           </div>
         </div>
