--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <div class="span8">
     {{ content }}
   </div>
-  <div class="span4">
+  <div class="span4 sidebar">
     {% include sidebar.html %}
   </div>
 </div>
