--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,5 +3,11 @@
     <div class="span8">
       {{ content }}
     </div>
+    <div class="span4 sidebar">
+      <h3>Projects</h3>
+      <ul>
+        <li><a href="#streamify">Streamify</a></li>
+      </ul>
+    </div>
   </div>
 {% include footer.html %}
