--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,26 +19,20 @@ ript>
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".na\
-v-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">{{ site.name }}</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li><a href="/">Home</a></li>
-              <li><a href="/projects">Projects</a></li>
-              <li><a href="/about">About Me</a></li>
-            </ul>
+    <header class="primary">
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inner">
+          <div class="container">
+            <a class="brand" href="#">{{ site.name }}</a>
+              <ul class="nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/about">About Me</a></li>
+              </ul>
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </header>
 
     <div class="wrapper">
       <div class="container">
