--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,12 +1,13 @@
 {% include header.html %}
   <div class="row-fluid">
-    <div class="span8">
+    <div class="span9">
       {{ content }}
     </div>
-    <div class="span4 sidebar">
+    <div class="span3 sidebar">
       <h3>Projects</h3>
       <ul>
         <li><a href="#streamify">Streamify</a></li>
+        <li><a href="#cookiejar">CookieJar</a></li>
       </ul>
     </div>
   </div>
