--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,15 @@ aside.tech {
 #disqus_thread {
   margin: 30px 0 50px 0;
 }
+
+a:hover {
+  text-decoration: none;
+}
+
+div.blog-post {
+  margin-bottom: 20px;
+}
+
+.center-text {
+  text-align: center;
+}
