--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,11 @@ div.blog-post {
 .center-text {
   text-align: center;
 }
+
+img.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
