--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 <div class="row-fluid">
-  <div class="span9">
+  <div class="span9 main-text">
     <h1 class="center-text">{{ page.title }}</h1>
     <p class="muted center-text">{{ page.date | date_to_long_string }}</p>
     {{ content }}
