--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'LucidaGrande';
-  src: url('css/fonts/lucidagrande.css');
+  src: url('fonts/lucidagrande.ttf');
 }
 
 body {
