Add nutty ninjas

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,6 +6,7 @@
     <div class="span3 sidebar">
       <h3>Projects</h3>
       <ul>
+        <li><a href="#nuttyninjas">Nutty Ninjas</a></li>
         <li><a href="#appman">AppMan</a></li>
         <li><a href="#streamify">Streamify</a></li>
         <li><a href="#cookiejar">CookieJar</a></li>
